mq exe 005 com menu burguer

--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -20,8 +20,21 @@ padding: 10px;
 text-align: center;
 }
 
+i#burguer {
+background-color: rgb(53, 53, 53);
+color: white;
+display: block;
+padding: 10px;
+}
+
+I#burguer:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
 menu {
-    display: block;
+    display: none;
 }
 
 menu > ul {
